[package]
name = "fbas_analyzer_nodejs"
version = "0.1.0"
authors = ["pieterjan84 <pieterjan84@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fbas_analyzer_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
fbas_analyzer = "0.4.2"
hex = "0.4.2"
sha3 = "0.9.1"